SF Primes/src/objects/Deploymment_Test_Two__c.object
<CustomObject>
    <description>Deploymment Test Two</description>
    <fields>
        <fullName>Date_Test_01__c</fullName>
        <label>Date Test 01</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Text_Field_01__c</fullName>
        <label>Test Text Field 01</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Text_Field_02__c</fullName>
        <label>Test Text Field 02</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Text_Field_03__c</fullName>
        <label>Test Text Field 03</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Deploymment Test Two</label>
    <nameField>
        <label>Deploymment Test Two Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deploymment Test Two</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>